# rgrasp

./: .gitignore  .gitmodules  README.md  install.sh  setup.sh  ssh_start
catkin_ws/src/abb-ros-catkin/matvec/: CMakeLists.txt  package.xml
catkin_ws/src/abb-ros-catkin/matvec/include/matvec/: matvec.h
catkin_ws/src/abb-ros-catkin/matvec/src/: HomogTransf.cpp  HomogTransf.h  Mat.cpp  Mat.h  Quaternion.cpp  Quaternion.h  RotMat.cpp  Vec.cpp  Vec.h
catkin_ws/src/abb-ros-catkin/matvec/src/matvec/: HomogTransf.py  Mat.py  Quaternion.py  RotMat.py  Vec.py
catkin_ws/src/abb-ros-catkin/robot_comm/: CMakeLists.txt  package.xml
catkin_ws/src/abb-ros-catkin/robot_comm/include/robot_comm/: robot_comm.h
catkin_ws/src/abb-ros-catkin/robot_comm/msg/: robot_CartesianLog.msg  robot_ForceLog.msg  robot_JointsLog.msg
catkin_ws/src/abb-ros-catkin/robot_comm/src/: .gitignore  robot_comm.cpp  robot_comm.h
catkin_ws/src/abb-ros-catkin/robot_comm/srv/: robot_ActivateCSS.srv  robot_ActivateEGM.srv  robot_AddBuffer.srv  robot_AddJointPosBuffer.srv  robot_Approach.srv  robot_ClearJointPosBuffer.srv  robot_DeactivateCSS.srv  robot_GetFK.srv  robot_GetIK.srv  robot_GetState.srv  robot_IOSignal.srv  robot_SetAcc.srv  robot_SetCartesian.srv  robot_SetCartesianJ.srv  robot_SetDefaults.srv  robot_SetInertia.srv  robot_SetMotionSupervision.srv
catkin_ws/src/abb-ros-catkin/robot_node/: CMakeLists.txt  package.xml
catkin_ws/src/abb-ros-catkin/robot_node/ABBInterpreter/: CMakeLists.txt
catkin_ws/src/abb-ros-catkin/robot_node/ABBInterpreter/EGM/: EGM.mod  egm-sensor-linux-mouse.cpp  egm-sensor-linux.cpp  egm.pb.cc  egm.pb.h  egmonlyserver.mod  server_with_egm.mod  udpclient.py
catkin_ws/src/abb-ros-catkin/robot_node/ABBInterpreter/EGM/ikfast/: ikfast61_irb120.cpp  (+1 more)
catkin_ws/src/abb-ros-catkin/robot_node/ABBInterpreter/include/: ABBInterpreter.h
catkin_ws/src/abb-ros-catkin/robot_node/ABBInterpreter/src/: ABBInterpreter.cpp
catkin_ws/src/abb-ros-catkin/robot_node/launch/: mcubeAPCSystem.launch  mcubeSystem.launch
catkin_ws/src/abb-ros-catkin/robot_node/parameters/: manifest.xml  mcubeAPCRobotParams.yaml  mcubeRobotParams.yaml
catkin_ws/src/abb-ros-catkin/robot_node/src/: robot_node.cpp  robot_node.h
catkin_ws/src/abb-ros-catkin/robot_node/src/tinyxml/: Makefile  xmlrri.cpp
catkin_ws/src/passive_vision/: CMakeLists.txt  package.xml
catkin_ws/src/passive_vision/camerainfo/: 612201002220.intrinsics.txt  612201002220.pose.txt  612201002220.xyz.offset.txt  612203002922.intrinsics.txt  612203002922.pose.txt  612203002922.xyz.offset.txt  612203004275.intrinsics.txt  612203004574.intrinsics.txt  612203004574.pose.txt  612203004574.xyz.offset.txt  612204001396.intrinsics.txt  612204001396.pose.txt  612204001396.xyz.offset.txt  612205002211.pose.txt  612205002211.xyz.offset.txt  613201001839.intrinsics.txt  613201001839.pose.txt  613201001839.xyz.offset.txt  613204000977.intrinsics.txt  613204000977.pose.txt  613204000977.xyz.offset.txt  614203000465.pose.txt  614203000465.xyz.offset.txt  614203003651.intrinsics.txt  614203003651.pose.txt  614203003651.xyz.offset.txt  614204001012.intrinsics.txt  614204001012.pose.txt  614204001012.xyz.offset.txt  614205001856.intrinsics.txt  614205001856.pose.txt  614205001856.xyz.offset.txt  61420501085.intrinsics.txt  61420501085.pose.txt  61420501085.xyz.offset.txt  616203002024.intrinsics.txt  616203002024.pose.txt  616203002024.xyz.offset.txt  616205001219.intrinsics.txt  616205001219.pose.txt  (+16 more)
catkin_ws/src/passive_vision/src/: depth2CamPts.m  estimate.cpp  getDebugImages.m  getHeightMap.m  main.m  main_integrator.m  main_profile.m  nmsRange.m  nmsRange2.m  predictDeepGrasp.m  predictGrasp.m  predictSuction.m  pub_extrinsic.py  scores.mat  script_yaml2bins.m  sub2ind2d.m  suction.lua  test_cuda.cu  test_nmsRange2.m
catkin_ws/src/passive_vision/src/bxf/: fill_depth_cross_bf.m  mex_cbf.mexa64
catkin_ws/src/passive_vision/src/stateIntegrator/: AddOneObject.m  LOG.txt  LocalUpdate.m  LocalUpdateSIFTflow.m  MoveOneObject.m  RemoveOneObject.m  addImagedataInfo.m  arc_object.csv  checkOutUinit.m  checkVisibility.m  estimatePoseICP.m  getCategorySegMap.m  getConfidence.m  getInstanceSegmentMask.m  getInstanceSegmentMaskProj.m  getMissingDepthVolume.m  getModelMeta.m  getModelPC.m  getSegConfience.m  initBinBG.m  loadImagedata.m  main_debug.m  main_offline.m  objectlist.csv  parseMessage.m  preloadModels.m  prepareDataloadPrev.m  projHeightMap.m  readbinfile.m  script_prepare.m  setMetadata.m  stateUpdate.m  visulizeState.m  writeStateTofile.m
catkin_ws/src/passive_vision/src/stateIntegrator/SIFTflow/: computeSIFTflow.m  demo.m  warpImage.m
catkin_ws/src/passive_vision/src/stateIntegrator/script/: script_genSegtestList.m  script_genStatefile.m
catkin_ws/src/passive_vision/src/stateIntegrator/utils/: BBfromPoints.m  KNNSearch.cu  KNNSearch.ptx  SelfKNNSearch.cu  SelfKNNSearch.ptx  SelfKNNSearch_faster.cu  denoisePointCloud.m  denoisePointCloudPCA.m  getImagesc.m  getRotationMatrix.m  multiQueryKNNSearchImplGPU.m  pcnormalsGPU.m  pcregrigidGPU.m  pointCloudGPU.m  pointCloudGPU_faster.m  ppmtopng_and_remove_ppm_nowait.m  proj3DPtsTo2D.m  read_3d_pts_general.m  removePointsOutBound.m  rotm2quat.m  selfKNNSearchImplGPU.m  selfKNNSearchImplGPU_faster.m  transformPointCloud.m  vis_point_cloud.m
catkin_ws/src/passive_vision/srv/: state.srv
catkin_ws/src/realsense_camera/: CMakeLists.txt  calibrate.m  calibrate_bottom.m  install.m  package.xml
catkin_ws/src/realsense_camera/include/: vision_helper.h
catkin_ws/src/realsense_camera/src/: helper.h  install.m  profile_stream.cpp  rosout_printer.py  stream.cpp  stream.h  test_cam.py  test_cam.sh  vision_helper.cpp
catkin_ws/src/realsense_camera/src/matlab_gen/jar/: abb_irb1600id_moveit_config-0.2.0.md5  active_vision-1.0.0.md5  apc_arduino-0.0.0.md5  apc_config-0.0.0.md5  apc_perception-0.0.0.md5  apc_planning-0.0.0.md5  capsen_vision-0.0.1.md5  manual_fit-0.0.0.md5  passive_vision-1.0.0.md5  pr_msgs-0.0.0.md5  realsense_camera-1.0.0.md5
catkin_ws/src/realsense_camera/srv/: snapshot.srv  start_lasers.srv
(+485 files in other folders)
